feat: add login and authentication
